--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server": "json-server server.json",
+    "dev:server": "json-server server.json -w",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src  --ext .tsx,.ts",
+    "lint:fix": "eslint src  --ext .tsx,.ts --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -24,11 +26,13 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^2.0.0",
-    "json-server": "1.0.0-beta.1",
+    "eslint": "8.17.0",
+    "json-server": "0.17.4",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
